# horde

./: .gitignore  README.md  pyproject.toml
src/horde/: __init__.py  __main__.py  _async.py  _compat.py  _event.py  _recorder.py  _runner.py  _state.py  _ui.py  _util.py  _version.py  _zombie.py  _zombie_task.py  delay.py  environment.py  errors.py  events.py  spawn_policy.py  utils.py
src/horde/cli/: __init__.py  _async.py  _logging.py  _main.py
src/horde/runners/: __init__.py  local.py
src/horde/user_interaces/: __init__.py  printer.py
src/horde/user_interfaces/: __init__.py  printer.py  terminal.py
src/horde/zombies/: httpx.py
