[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "horde"
version = "1.0.0a2"
description = "a performance testing framework using python asyncio"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "boonhapus", email = "me@boonhap.us"},
]
maintainers = [
    {name = "boonhapus", email = "me@boonhap.us"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[project.urls]
repository = "https://github.com/boonhapus/horde"
bug_tracker = "https://github.com/boonhapus/horde/issues"

[project.optional-dependencies]
cli = ["typer[all]==0.7.0", "textual", "pynput", "httpx"]
dev = ["black", "coverage[toml]", "ward"]

[tool.black]
line-length = 120
exclude = '''
(
      __pycache__   # ignore compiled bytecode
    | \.venv*       # ignore virtual environments
    | \.nox         # ignore virtual environments
)
'''

[tool.ward]
path = "tests/"

[tool.coverage.run]
branch = true
include = [
    "src/**.py",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "# pragma: peephole optimzer",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
